--- a/examples/hello_world_local.yaml
+++ b/examples/hello_world_local.yaml
@@ -15,7 +15,7 @@ deployments:
   - name: EigenLayer
     repo: "."
     contracts_path: "contracts"
-    script: script/DeployEigenLayerCore.s.sol:DeployEigenlayerCore
+    script: script/DeployEigenLayerCore.s.sol
     env:
       # NOTE: this is used inside the deployer script
       PRIVATE_KEY: "{{.deployer_private_key}}"
