--- a/examples/eigenda.yaml
+++ b/examples/eigenda.yaml
@@ -8,7 +8,11 @@
 # 0. Ensure you have the latest version of the devnet (see the README for how to install)
 # 1. Clone the https://github.com/Layr-Labs/eigenda repo
 # 2. Copy this file inside that repo (on the root), and move inside it
-# 3. Download the SRS files by running: `mkdir -p resources && curl -L https://github.com/Layr-Labs/rust-kzg-bn254/raw/refs/heads/master/tests/test-files/\{g1.point,g2.point,g2.point.powerOf2\} -o "resources/#1"`
+# 3. Download the SRS files by running:
+#    mkdir -p resources
+#    curl -L https://srs-mainnet.s3.amazonaws.com/kzg/g1.point -o resources/g1.point
+#    curl -L https://srs-mainnet.s3.amazonaws.com/kzg/g2.point -o resources/g2.point
+#    curl -L https://srs-mainnet.s3.amazonaws.com/kzg/g2.point.powerOf2 -o resources/g2.point.powerOf2
 # 4. Run `devnet start eigenda.yaml`
 
 deployments:
@@ -82,8 +86,8 @@ services:
       NODE_G1_PATH: /kzg/g1.point
       NODE_G2_PATH: /kzg/g2.point
       NODE_CACHE_PATH: /kzg/cache
-      NODE_SRS_ORDER: 3000
-      NODE_SRS_LOAD: 2900
+      NODE_SRS_ORDER: 65536
+      NODE_SRS_LOAD: 65536
       NODE_CHAIN_RPC: "{{.http_rpc_url}}"
       NODE_PRIVATE_KEY: "{{slice .keys.node1_ecdsa.private_key 2}}"
       NODE_ECDSA_KEY_FILE: /keys/ecdsa/keys/1.ecdsa.key.json
@@ -141,8 +145,8 @@ services:
       NODE_G1_PATH: /kzg/g1.point
       NODE_G2_PATH: /kzg/g2.point
       NODE_CACHE_PATH: /kzg/cache
-      NODE_SRS_ORDER: 3000
-      NODE_SRS_LOAD: 2900
+      NODE_SRS_ORDER: 65536
+      NODE_SRS_LOAD: 65536
       NODE_CHAIN_RPC: "{{.http_rpc_url}}"
       NODE_PRIVATE_KEY: "{{slice .keys.node2_ecdsa.private_key 2}}"
       NODE_ECDSA_KEY_FILE: /keys/ecdsa/keys/1.ecdsa.key.json
@@ -200,8 +204,8 @@ services:
       NODE_G1_PATH: /kzg/g1.point
       NODE_G2_PATH: /kzg/g2.point
       NODE_CACHE_PATH: /kzg/cache
-      NODE_SRS_ORDER: 3000
-      NODE_SRS_LOAD: 2900
+      NODE_SRS_ORDER: 65536
+      NODE_SRS_LOAD: 65536
       NODE_CHAIN_RPC: "{{.http_rpc_url}}"
       NODE_PRIVATE_KEY: "{{slice .keys.node3_ecdsa.private_key 2}}"
       NODE_ECDSA_KEY_FILE: /keys/ecdsa/keys/1.ecdsa.key.json
@@ -351,9 +355,10 @@ services:
       DISPERSER_SERVER_PER_USER_UNAUTH_BYTE_RATE: "32000,32000"
       DISPERSER_SERVER_TOTAL_UNAUTH_BLOB_RATE: "10,10"
       DISPERSER_SERVER_PER_USER_UNAUTH_BLOB_RATE: "2,2"
-      DISPERSER_SERVER_ENABLE_RATELIMITER: "true"
+      DISPERSER_SERVER_ENABLE_RATELIMITER: "false"
       DISPERSER_SERVER_RETRIEVAL_BLOB_RATE: "4"
       DISPERSER_SERVER_RETRIEVAL_BYTE_RATE: "10000000"
+      DISPERSER_SERVER_MAX_BLOB_SIZE: 2097152
       DISPERSER_SERVER_BUCKET_SIZES: "5s"
       DISPERSER_SERVER_BUCKET_MULTIPLIERS: "1"
       DISPERSER_SERVER_COUNT_FAILED: "true"
@@ -390,8 +395,9 @@ services:
       DISPERSER_ENCODER_G1_PATH: /kzg/g1.point
       DISPERSER_ENCODER_G2_PATH: /kzg/g2.point
       DISPERSER_ENCODER_CACHE_PATH: /kzg/cache
-      DISPERSER_ENCODER_SRS_ORDER: 3000
-      DISPERSER_ENCODER_SRS_LOAD: 2900
+      DISPERSER_ENCODER_SRS_ORDER: 65536
+      DISPERSER_ENCODER_SRS_LOAD: 65536
+      DISPERSER_ENCODER_PREVENT_REENCODING: true
 
   - name: retriever
     image: eigenda-retriever
@@ -420,8 +426,8 @@ services:
       RETRIEVER_G1_PATH: /kzg/g1.point
       RETRIEVER_G2_PATH: /kzg/g2.point
       RETRIEVER_CACHE_PATH: /kzg/cache
-      RETRIEVER_SRS_ORDER: 3000
-      RETRIEVER_SRS_LOAD: 2900
+      RETRIEVER_SRS_ORDER: 65536
+      RETRIEVER_SRS_LOAD: 65536
       RETRIEVER_CHAIN_RPC: "{{.http_rpc_url}}"
       RETRIEVER_PRIVATE_KEY: "{{slice .keys.disperser_key.private_key 2}}"
       RETRIEVER_ENABLE_METRICS: true
@@ -451,7 +457,7 @@ services:
       BATCHER_BATCH_SIZE_LIMIT: 10240
       BATCHER_USE_GRAPH: false
       BATCHER_GRAPH_URL: ""
-      BATCHER_SRS_ORDER: 3000
+      BATCHER_SRS_ORDER: 65536
       BATCHER_CHAIN_RPC: "{{.http_rpc_url}}"
       # This removes the leading "0x" from the private key
       BATCHER_PRIVATE_KEY: "{{slice .keys.disperser_key.private_key 2}}"
@@ -477,7 +483,7 @@ services:
       TRAFFIC_GENERATOR_REQUEST_INTERVAL: 5s
       TRAFFIC_GENERATOR_DATA_SIZE: "1024"
 
-  - name: eigenda-proxy
+  - name: proxy
     image: ghcr.io/layr-labs/eigenda-proxy
     ports:
       rpc:
@@ -485,7 +491,7 @@ services:
         transport_protocol: TCP
         application_protocol: "http"
       metrics:
-        number: 7300
+        number: 9100
         transport_protocol: TCP
         application_protocol: "http"
     input:
@@ -502,9 +508,9 @@ services:
       EIGENDA_PROXY_EIGENDA_ETH_CONFIRMATION_DEPTH: 0
       EIGENDA_PROXY_METRICS_ADDR: "0.0.0.0"
       EIGENDA_PROXY_METRICS_ENABLED: true
-      EIGENDA_PROXY_METRICS_PORT: 7300
+      EIGENDA_PROXY_METRICS_PORT: 9100
       EIGENDA_PROXY_EIGENDA_GRPC_DISABLE_TLS: true
-      EIGENDA_PROXY_EIGENDA_MAX_BLOB_LENGTH: 92800 # 2900 points * 32 bytes per point
+      EIGENDA_PROXY_EIGENDA_MAX_BLOB_LENGTH: 2097152 # 65536 points * 32 bytes per point
 
 # Specify keys to generate
 keys:
