feat: update EigenDA example with new syntax

--- a/examples/eigenda.yaml
+++ b/examples/eigenda.yaml
@@ -8,8 +8,7 @@
 # 0. Ensure you have the latest version of the devnet (see the README for how to install)
 # 1. Clone the https://github.com/Layr-Labs/eigenda repo
 # 2. Copy this file inside that repo (on the root), and move inside it
-# 3. Download the SRS files by running: `mkdir -p resources && curl -L https://github.com/Layr-Labs/rust-kzg-bn254/raw/refs/heads/master/tests/test-files/\{g1.point,g2.point,g2.point.powerOf2\} -o "resources/#1"`
-# 4. Run `devnet start eigenda.yaml`
+# 3. Run `devnet start eigenda.yaml`
 
 deployments:
   # NOTE: this script also deploys EigenLayer contracts
@@ -556,11 +555,11 @@ artifacts:
   kzg_config:
     files:
       g1.point:
-        static_file: "resources/g1.point"
+        static_file: "https://github.com/Layr-Labs/rust-kzg-bn254/raw/refs/heads/master/tests/test-files/g1.point"
       g2.point:
-        static_file: "resources/g2.point"
+        static_file: "https://github.com/Layr-Labs/rust-kzg-bn254/raw/refs/heads/master/tests/test-files/g2.point"
       g2.point.powerOf2:
-        static_file: "resources/g2.point.powerOf2"
+        static_file: "https://github.com/Layr-Labs/rust-kzg-bn254/raw/refs/heads/master/tests/test-files/g2.point.powerOf2"
 
 # ethereum-package configuration
 ethereum_package:
