--- a/examples/eigenda.yaml
+++ b/examples/eigenda.yaml
@@ -453,12 +453,15 @@ services:
       BATCHER_ENCODER_ADDRESS: "{{.services.encoder.ip_address}}:8080"
       BATCHER_ENABLE_METRICS: true
       BATCHER_METRICS_HTTP_PORT: 9100
+      # The following config has been tested against 10xMBps
       BATCHER_BATCH_SIZE_LIMIT: 65536
       BATCHER_NUM_CONNECTIONS: "512"
       BATCHER_PULL_INTERVAL: 120s
+      # setting this too low may result in encoding jobs never finishing
       BATCHER_ENCODING_TIMEOUT: 64s
       BATCHER_ATTESTATION_TIMEOUT: 100s
       BATCHER_ENCODING_REQUEST_QUEUE_SIZE: 1000
+
       BATCHER_USE_GRAPH: false
       BATCHER_GRAPH_URL: ""
       BATCHER_SRS_ORDER: 65536
