--- a/examples/aligned_layer.yaml
+++ b/examples/aligned_layer.yaml
@@ -119,7 +119,7 @@ services:
       - "sh"
       - "-c"
       - >-
-        sleep 12 &&
+        sleep 6 &&
         TOKEN_ADDR=$(cast call --rpc-url $RPC_URL {{.addresses.EigenLayer.mockStrategy}} 'underlyingToken()(address)') &&
         cast send $TOKEN_ADDR 'mint(address, uint256)' $OPERATOR_ADDRESS 100000000000000000
         --private-key $DEPLOYER_PRIVATE_KEY --rpc-url $RPC_URL
@@ -140,7 +140,7 @@ services:
       - "sh"
       - "-c"
       - >-
-        sleep 24 &&
+        sleep 12 &&
         aligned-layer-operator deposit-into-strategy --config ./config-files/config-docker.yaml
         --strategy-address {{.addresses.EigenLayer.mockStrategy}} --amount 100000000000000000
 
@@ -160,7 +160,7 @@ services:
       - "-c"
       - >-
         echo "Registry address: $REGISTRY_ADDR" &&
-        sleep 36 &&
+        sleep 18 &&
         cast send  $REGISTRY_ADDR 'add(address)' $OPERATOR_ADDRESS --rpc-url $RPC_URL --private-key $DEPLOYER_PRIVATE_KEY
 
   - name: operator-register-with-aligned-layer
@@ -176,7 +176,7 @@ services:
     cmd:
       - "sh"
       - "-c"
-      - "sleep 48 && aligned-layer-operator register --config ./config-files/config-docker.yaml"
+      - "sleep 24 && aligned-layer-operator register --config ./config-files/config-docker.yaml"
 
   - name: "operator1"
     image: "ghcr.io/yetanotherco/aligned_layer/operator:latest"
@@ -191,7 +191,7 @@ services:
     cmd:
       - "sh"
       - "-c"
-      - "sleep 60 && aligned-layer-operator start --config ./config-files/config-docker.yaml"
+      - "sleep 30 && aligned-layer-operator start --config ./config-files/config-docker.yaml"
 
   - name: batcher
     image: ghcr.io/yetanotherco/aligned_layer/batcher:latest
@@ -436,7 +436,7 @@ artifacts:
           el_delegation_manager_address: "{{.addresses.EigenLayer.delegationManager}}"
           private_key_store_path: keystores/keys/1.ecdsa.key.json
           bls_private_key_store_path: keystores/keys/1.bls.key.json
-          signer_type: local
+          signer_type: local_keystore
           chain_id: 31337
 
   avs_addresses_merged:
@@ -489,3 +489,4 @@ ethereum_package:
   network_params:
     # We use anvil's chain ID because 3151908 is not supported by eigenlayer-cli
     network_id: "31337"
+    seconds_per_slot: 3
